v.0.3.5 нарисовал путь платформы

--- a/Hexapod/Hexapod/MainForm.resx
+++ b/Hexapod/Hexapod/MainForm.resx
@@ -242,4 +242,170 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>49</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAMDAAAAEAIACoJQAAFgAAACgAAAAwAAAAYAAAAAEAIAAAAAAAACQAABILAAASCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABoaGhwQkJCagAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAL+/7w92d94UU1PXFExN1RRTVK8UlZW4K4eI1mZBQr5mNDO8bXl5
+        1LhERMN2SEjFZpiZ32Z8fN0bzs31BwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAzMzNwXV1dvwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAKyt6TNiY9SKMjLIwicnyO4eHsf/FhXI/xQUyv8XF67/GhpP/wEB
+        rP8CAa3/AQGw/wEBsv8DArH/DxCB/xsbXv8tLWX/NjaH2E1Nx4qdneMzAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABmZmauYmJi1gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACoqOYmTU7NqB0dt/sLCpn/CQmg/wEBwP8AAMP/AQDG/wAA
+        yf8DA7z/EBBI/wAAtP8AAbb/Cwu6/zIyxv9GRaf/KSkp/ykpKf8pKSn/Kiop/yssc/86Ocn7UFDPqLCw
+        6iYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABhYWHCVVVV1gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJSU310pKcHrERJ//yUlN/8pKSn/KSgr/woK
+        nv8BAMP/AQDI/wAAyv8CAsb/Dw9P/wEAu/8AAL3/BgbB/xUVxv8bG8D/Gxti/ycnMP8oKSr/Li80/3p6
+        n/+pqOn/dXXb/zM0y96DhOBQAAAAAAAAAAAAAAAAAAAAAAAAAABHR0fCSEhI1gAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAKqqqjirq6sdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiovcXBwcvPkMDJH/KCgr/ykp
+        Kf8pKSn/JCQ9/wQDt/8BAMX/AADI/wEBy/8AAM7/Dw5X/wEAwv8BAMT/AADG/wAAyf8BAcr/AQHK/wUE
+        vv8HB7P/EA/C/1BQ2v+Vleb/rKzp/5SU5P8yM8/5dXbfXAAAAAAAAAAAAAAAAMTExBJAQED4S0tLwwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAE1NTcJ+fn5+AAAAAAAAAAAAAAAAAAAAAAAAAACVleAqKSm/+gEB
+        tv8MDJj/KCg4/yUlOf8ZGWT/BQWx/wEAw/8BAMf/AADJ/wEAzP8BANH/DQ1l/wEByv8AAMz/AQDO/wEA
+        0P8AANH/AADS/wAA0v8AANT/AQDT/wEA0v8JCdP/TEzc/5+f6P+NjeT/JyfR+pOT6EQAAAAAAAAAAKen
+        p0UeHh7/bW1thQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF5eXqhXV1e5AAAAAAAAAAAAAAAAAAAAAMLB
+        6wNGR8fLAQG1/wAAt/8ZGa//JSWq/wIDu/8AAb7/AADC/wEAxP8AAMj/AADK/wAAzf8AANL/DAxx/wEB
+        0f8AANP/AADV/wAA1/8AANj/AADZ/wAA2v8AANr/AADa/wAB2f8AANn/AAHX/xQU2P94eOP/Xl7e/zEx
+        1+KRkekHAAAAAGxsbIAhISH/kJCQNgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF5eXnA0NDTl3d3dDwAA
+        AAAAAAAAAAAAAGhn0kUIB7b/AQG2/wwMtP8wMKz/LCut/wICvf8AAMD/AADC/wEAxf8AAMn/AQDL/wAA
+        zv8BANH/CgqB/wEB1v8AANv/AADd/wAA3/8AAOH/AQHi/wEA4/8BAOP/AQDi/wEA4v8BAOD/AADf/wAA
+        3f8DAtv/RUTf/xEQ1v9oaeSX4uLiAEVFRbo7Ozvq7+/vEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKKi
+        omomJib/h4eHLwAAAAAAAAAACQkLAERDxs4BAbX/AgK2/ykpsf83Nq7/NDOu/wMEvf8AAMH/AADD/wAA
+        x/8AAMr/AADN/wAAz/8BANL/CAmT/wEB2f8AAOH/AADk/wEA5/8AAOj/AADp/wAA6v8BAOr/AADq/wAA
+        6f8AAOj/AADm/wAA5P8BAOL/AAHf/wEC3P8rK97/cXF4OC0tLf82NjbgAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAHNzcx8mJib/a2trngAAAAAAAAAAxcPtJBUVuf8AALX/EBG2/z09sf89PbH/PDyx/wcH
+        vf8AAML/AQDE/wAAyP8BAMv/AADN/wEA0f8AANT/Bgaj/wIC2f8AAOn/AADr/wAA7v8AAPD/AQDx/wAA
+        8f8AAPL/AADy/wAB8P8AAO//AADt/wAA7P8AAOn/AQDm/wEB4v8BAd//LS1j/xcYGP8tLS3gAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAMrKygZDQ0PJNjY29cDAwCYAAAAAWVnOXwEBtP8BAbb/Li61/0ND
+        tP9CQrT/QkK0/w4Ovv8AAMP/AQDG/wAAyf8BAMz/AADP/wEA0v8AANX/BAS4/wMD0f8AAPD/AADz/wAB
+        9f8AAff/AAH4/wEA+f8BAPn/AwPt/w4Otf8MDLz/AgLu/wAA8/8AAPD/AQDs/wAA6f8BAeT/CgqP/xcX
+        F/9DQ0PTAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB5eXlQHx8f/2RkZIEAAAAAQkLFowIB
+        tf8ICLf/RUa4/0hJuP9ISbf/SEm3/xcXvv8BAMT/AQDI/wAAyv8AAM3/AADQ/wEA0/8AANb/AgPL/wUF
+        yv8AAff/AQD6/wAB/P8AA/7/AAX+/wEH/v8ECu7/IiJP/ykpKP8pKSn/HB1m/wIC8/8AAfb/AADz/wAA
+        8P8AAOv/BAPK/xcYFv9gX19+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADFxcUFPz8/yDMz
+        M+SRkZELTU3K6wEBtv8ZGrn/UFC7/09Pu/9OT7n/RESR/yQkdv8MDJv/AQDI/wEAy/8AAM7/AQDR/wAA
+        1f8AANf/AADZ/wUFyf8BAv7/AQj//wAO/v8BE/7/ABb//wAY/v8SH6H/KSkp/ykpKf8pKSn/KSkp/wsP
+        w/8AAv3/AQH6/wAA9v8AAPH/AgHo/ygoOvq5ubkvAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAgICAhRgYGP93d3ekOTnE+AABt/8vL7z/VFW+/1RUvv9AQHn/KSoq/ykpKP8oKSr/EhKI/wEB
+        zf8AAM//AQDS/wAA1v8AANj/AADe/wUJyP8AEP7/ARj//wEe/v8BJP//ACj+/wEq/v8UKpr/KSkp/ykp
+        Kf8pKSn/KSkp/w0cvP8AEP7/AQf//wEB/P8AAPf/AQHz/0dIh7oAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAhISEUBobG/8fHh3/FhWr/wABuP89Pb7/W1rB/1lZvf8wLzz/KSkp/ykp
+        Kf8pKSn/JCM//wEBz/8AAND/AADT/wAA1/8AANr/AADd/wQOz/8BH///ASj+/wAu/v8BNP//ADj+/wE7
+        /v8FO+X/Jio4/ygpKv8pKSn/IipO/wMn8v8BHv7/ABX+/wEL//8BAv3/AgH4/3t79JkAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAubm5ISsrK/QXGBX/Bgah/wEBuP9GRsH/YWHE/2Bg
+        wf8xMUD/KSkp/ykpKf8pKSn/IyND/wAA0P8BANL/AADV/wAB2P8AANv/AADe/wMQ0v8BLv7/ATf+/wFA
+        /v8ARv//AUv+/wFN//8BT///BUrm/xQ9lv8SO5//Az3v/wE2/v8BLv7/ASP+/wAY/v8AC///AQL9/2xt
+        +5kAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF5eXp8YGBb/BAWb/wAB
+        uP9HR8P/aGfG/2dnx/9PT4v/Kyst/ykpKf8oKC3/Dg6X/wEA0P8BANL/AADW/wAA2f8AANz/AADf/wMM
+        0/8APf7/AUf//wBP//8AV/7/AFz//wBf/v8AYP//AF/+/wFb/v8BVv7/AU7//wBG//8APP7/ADD+/wEl
+        //8AF///AQr//3Fy/pkAAAAAyMjIF4KCgmajo6NHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJGS
+        jg82NjTmBgeQ/wEBuf9CQsP/bW3K/21tyv9sbcn/YGCs/1VUjv8pKq//AQHO/wEA0f8AANT/AADW/wAA
+        2v8AAN3/AADg/wIH2f8BSvv/AVX//wFf//8BZ/7/AW3+/wBw/v8Acf//AHD//wFt//8BZv//AF7//wBU
+        //8ASv//AD3//wAw/v8BIv7/ART+/3+E/48AAAAAX19fnikpKemdnZ0lAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAACLi4hmDw+D/QEAuf8zM8P/c3PN/3Jyzf9ycsz/cXLM/3FxzP9KS8z/AQDP/wEA
+        0v8AANX/AADZ/wAA2/8AAN7/AADh/wEA4f8CUvP/AWP//wFu//8Adv//AH3//wCB//8Bg///AIH//wF9
+        //8Bdv//AW3//wFj//8BVv//AEn+/wA7/v8ALf//BB7//1Ng/keenp5AKCgo9Xh4eH4AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATE25ygEBuv8bHMD/eXnQ/3d4z/93eND/dnjQ/3d4
+        0P9tbs//AgLQ/wAA0/8AANb/AADZ/wAA3P8AAN//AQDi/wEA5f8CUvH/AXD//wB8//8Bhf//AI3//wCS
+        //8AlP//AZL//wGN//8Ahf//AXv//wBv//8CYfj/FT6T/xczhP8BNvz/CSv//7G5+0tLS0vBSUlJzLCw
+        sAcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAa2vWdgEBuv8HB77/c3PS/35+
+        0/9+ftP/fn7T/35+0/9+f9P/GxvR/wAA1f8AANf/AADa/wAA3v8AAOD/AQDj/wAA5/8DS+//AXv+/wGI
+        /v8BlP//AJ3//wCj/v8Bpf//AaP//wGc//8Ak///AIf+/wB7/v8WSo7/KCkp/ykqK/8FO+n/HUL+9mFh
+        ZF4rKyv4gYCBMQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAK6urh92dnZvpaWlYAAAAAAAAAAAwMHuOwkJ
+        vf8BAb7/V1fO/4OF1f+EhNX/g4TV/4OE1f+Cg9X/SUnU/wEB1v8AANj/AADc/wAA3/8BAOH/AQDm/wQE
+        1v8ROa//El6j/w9tsf8Gj97/Aaz+/wG0/v8Atv7/AbP//wGs//8Bn///AJP//wR+7P8mLzj/KSkp/yYs
+        OP8CQ/X/K0zP/iIiIfk0NDTgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKioqA5gYGDEKSkp/XFx
+        cWwAAAAAAAAAAC8vyOUBAb//KCe1/2troP+Iidb/iorZ/4uK2f+Kitn/enrY/wMD1/8AANn/AADc/wAA
+        3/8EBNT/Ghpt/ygoLv8pKSn/KSkq/ykqKf8oKyz/HFdt/wS67f8Ayf7/AcP//wG5//8Aq///AZz+/wh6
+        1P8pKSn/KSkp/xc9iP8BSf3/DiVt/xcYGP9fXl+SAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAxMTEAWFhYfykpKf5kZGSD5eXlB0tKz5ABAb//HB1Y/ykpKf9PT2v/jo/a/4+P2/+PkNv/j5Db/ykp
+        2f8BAdv/AADe/wQD1P8jI0f/KSkp/ykpKf8pKSn/KSkp/ykpKf8pKSn/KSkp/xxhbf8B2fz/ANL+/wHD
+        //8Asv//AaH//wOK7v8hO1L/GkF3/wJb9v8BS/r/Fhss/z4+PtDKysoUAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAIaGhm0nJyfwWFhYt6Sjx2kSEsT/HRxZ/ykpKf8pKir/fX21/5aW
+        3v+Wld7/lpXf/2ho3f8BAdv/AADf/xMTjP8pKSn/KSkp/ykpKf8pKSn/KSkp/ykpKf8pKSn/KSkp/yY1
+        N/8D3fL/Adf+/wHG/v8AtP//AKP+/wCS/v8Agf//AG/+/wFe/v8HP73/NjY00I6OjhQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABmZmZ1GBgY/ysqK/8kJH//EBCM/ygp
+        Kf8pKSn/ZGSH/5yc4v+cnOH/nJzh/3Nz4P8DA93/AQHh/xcXef8pKSn/KSkp/ykpKf8pKSn/KSkp/ykp
+        Kf8pKSn/KSkp/yBNVv8B1Pn/AdD+/wDB/v8Asf7/AKD//wCQ//8Bfv7/AW7//wFd/v81VpvRjY+QFAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADl5eUOXFxcwxka
+        Gv8XFx3/Bwae/xwcXP8pKSn/cXGY/6Ki5f+fn+X/YWHg/wkJ3P8AAN7/AADg/woKuf8nKDD/KSkp/ykp
+        Kf8pKSn/KSkp/ykpKf8oKSn/JjM3/wqey/8Bxf7/AcH+/wG2/v8Bqf//AJr+/wGK//8Aev//AWr+/x1r
+        /vSSr+oZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA5+fnDVRUVGQ9Pj7xEhJA/wMDwv8xMbL/iYnf/2Vk4P8kJNr/AQLZ/wAA3P8AAN//AQDi/wEB
+        5v8NDbH/IiJM/ygpK/8qKSf/KSko/ycuNP8dTmz/CJPX/wCx/v8AtP//ALH//wCp//8Anf//AZH//wGC
+        //8BdP7/AmP+/0mF/o0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADFxcUdfn9/lB0dpvMDA87/BQXS/wEB1P8AANf/AADb/wAA
+        3f8AAOD/AQDj/wAA5/8BAer/AgLn/wcH0P8LC7//Ei/K/wR/6f8Bkfz/AJr+/wCg//8Aov7/AaD//wCZ
+        //8AkP//AIX//wF5//8Ba/7/JXL/8Jq7/hkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGlo3lAVFNP/AQDS/wAA
+        1v8AANj/AADc/wAA3/8AAOH/AQDl/wEA6P8BAOr/AADu/wEB8P8DA7v/DBFi/wkvVP8HR37/BWCn/wN5
+        0P8Bi+//AZD+/wCL/v8Bgv7/AHj+/wFt//8HY///bp/+egAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOzr
+        +wJycuWJCwrU/wAA1/8AANr/AADd/wAA4P8BAOL/AQDl/wAA6f8CAtv/AwSK/wgIMP8MDQ7/DQ0O/wwN
+        Df8NDQ3/DQ0N/w0NDv8MERb/Cx8x/wozW/8JQ4P/ClGw/xBd2f9BfvbE2eX/CwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAANDRAAcXHoiREQ2v4AANv/AADe/wAA4P8BAeD/BASx/xISY/91c3H/wLur/8rF
+        s/+Wk4b/LSsp/w0NDv8NDQ3/Dg4O/1dVT/+qpZb/oZ2Q/0A/Ov8NDQ7/DQwM/w4MC/8+PTvMAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHZ26lkiIuDuAgLK/wYGgP8MCy//HRwa/8O/
+        r//+9N7///Te///03v//897/7OXR/0RDPf8NDQ3/cnBn//vz3f/+897//vPe//bu2f9IR0L/DQ0N/w4O
+        Dv9xcXGLAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/g/kUPj5N2w4N
+        Df8NDQ3/kIyA//703v//9N7///Te///03v//9N7///Te/9bQvf8eHRz/3dfE//703v/+9N7///Te///0
+        3v+5tKT/DAwM/yUlJfKcnJwcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAkpKSRSAgIP8UFRT/3dfE///03v//9N7///Te///03v//9N7///Te//zz3f9YVU7/6uTQ//zz
+        3f+7t6j/1M+9//703v/Lx7b/Dg4O/xoaGv9BQUGZcHBwBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA0tLSFzY2NugeHRv/7ObR///03v/+9d7/7efS/+nizf//9d7///Te//71
+        3v9bWlP/trKi/9jSv/8sLCv/R0ZD//334P+Rj4P/c3R0tEpKSsQbGxv/NDQ0mtPT0xQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaGhoiRcXF/8pKSjr3dfF//703v/Uzrz/PDw5/zQ0
+        Mv+8t6f//vTe//rx2/88Ozb/Kyon/7+7q/+TkIX/s6+g/7u3qf12dnSB5+fnB3x8fAVpaWmaIyMj/0lJ
+        SaWqqqoCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADIyMgxLCws+CUlJfmPjo1P+fLfiP70
+        3v+joZX/KSop/yoqKv+EgHf//vTe/7+6qv8QEBD/DQ0N/xISEf8zMi//W1pW0Y6NjUgAAAAAAAAAAAAA
+        AADs7OwEYmJiZyIiIv+RkZFsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABeXl66GBgY/21t
+        bYIAAAAA//XfAv/13onx6dP/endu/2tpYv/l3sv/0cu5/ycmJP8TExP/Nzc3/0lJScsrKyv/j4+PQgAA
+        AAAAAAAAAAAAAAAAAAAAAAAA5ubmAlNTU7c3Nzfi6OjoGgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMnJ
+        yTElJSX8UFBQ1AYGBgAAAAAAAAAAAAYFBQD99uAu/vfknf7446OKh37/UFBPtqanp1Lb29tFERERAAkJ
+        CQB1dXWTRkZG5NfX1wMAAAAAAAAAAAAAAAAAAAAAAAAAAJ+fnxc8PDz1R0dHxLa2tjvZ2dkCAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAHFxcWgXFxf/jo6OSwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKKiokEyMjL7r6+vKwAA
+        AAAAAAAAAAAAAAAAAAAAAAAASEhI1IuLi1gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACenp4uQUFB0Ssr
+        K/9NTU3JjY2NRQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAE1NTaM+Pj7/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG5u
+        bqNpaWm3AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAb29vW1VVVcju7u4JAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAx8fHAn5+fl5ISEjQZWVlhQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAp6enCjg4OO5YWFi+AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAEJCQrB9fX1iAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPz8/AGBgYMtgYGC6v7+/KgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADi4uIG39/fGwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADT09MKZWVlsiUlJf+JiYk+AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAeXl5DktLS/fFxcUnAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANHR
+        0Q9XV1eIiYmJjwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKqqqh1BQUGyIyMj/2Nj
+        Y3/Pz88BAAAAAAAAAAAAAAAAAAAAAAAAAABqamoPOTk5wlNTU3YAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAADn5+cC7e3tEQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA3NzcEk1N
+        TeQmJib/d3d3f6+vrwIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACUlJQ9d3d3pmhoaAEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA7u7uAXFxccGDg4NZ4uLiAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADy8vIC8PDwBAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//////88AAP//gAD/zwAA//wAAD/P
+        AAD/8AAAD88AAP/gAAAHzwAAz8AAAAOPAADPgAAAAY8AAM8AAAAAjwAAxwAAAAAPAADHAAAAAB8AAMYA
+        AAAAHwAAwgAAAAAfAADiAAAAAB8AAOAAAAAAHwAA8AAAAAA/AADwAAAAAD8AAPAAAAAAPwAA+AAAAAAj
+        AAD4AAAAACMAAPwAAAAABwAA/gAAAAAHAAD+AAAAAA8AAMYAAAAAHwAAwwAAAAAfAADwAAAAAB8AAPgA
+        AAAAPwAA/AAAAAB/AAD8AAAAAP8AAP4AAAAB/wAA/4AAAAH/AAD/4AAAA/8AAP/gAAAD/wAA//gAAAf/
+        AAD//AAAB/8AAP/+AAAH/wAA//8AAAP/AAD//wAAAf8AAP//AAAA/wAA//4AAHD/AAD//iAA+H8AAP/8
+        eAx8HwAA//x+Pn4PAAD//P5+Pw8AAP/4/n8fzwAA//D8fx//AAD/4Pj/n/8AAP/B+P///wAA/8P5////
+        AAA=
+</value>
+  </data>
 </root>
